<resources>
    <string name="app_name">Vé máy bay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AIRTICKET KERI</string>
    <string name="nav_header_subtitle">Dịch vụ đặt vé máy bay trực tuyến</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Trang Chủ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="find_plane_label">TÌM CHUYẾN BAY</string>
    <string name="khuhoi">KHỨ HỒI</string>
    <string name="motchieu">MỘT CHIỀU</string>
    <string name="swap">Đổi điểm đi điểm đến</string>
    <string name="lblDiemDi">Điểm Đi</string>
    <string name="lblDiemDen">Điểm Đến</string>
    <string name="lblNgayDi">Ngày đi</string>
    <string name="chooseNgayDi">Chọn ngày đi</string>
    <string name="lblNgayDen">Ngày Đến</string>
    <string name="lblHK">Hành Khách</string>
    <string name="lblNguoiLon">Người lớn</string>
    <string name="lblTreEm">Trẻ em</string>
    <string name="defaultNguoiLon">1</string>
    <string name="defaultTreEm">0</string>
    <string name="btnFindPlanes">Tìm vé máy bay</string>
    <string name="lblFind">Tìm vé máy bay</string>
    <string name="lblfindcode">Tra Cứu Mã Giữ Chỗ</string>
    <string name="lblThongTin">Trợ Giúp</string>
    <string name="lblShare">Chia sẻ ứng dụng</string>
    <string name="lblMadatcho">Mã số đặt chỗ *</string>
    <string name="lblSurname">Họ (ví dụ: Nguyễn) *</string>
    <string name="lblLastName">Tên đệm và Tên (ví dụ: Văn A) *</string>
    <string name="lblTracuu">Tra cứu</string>
    <!-- String for fragment_information_layout -->
    <string name="lblLienhechungtoi">Liên Hệ Chúng Tôi</string>
    <string name="lblDiaChi">Địa chỉ: Tòa nhà SBI, CVPM Quang Trung, P. Tân Chánh Hiệp, Quận 12, Tp.HCM, Việt Nam.</string>
    <string name="lblBuy">Mua vé. (Lưu ý: Sau 18h đóng cửa)</string>
    <string name="lblWeb">Web: https://keri.vn</string>
    <string name="lblEmail">Email: sale@keri.vn</string>
    <string name="lblHotline">Hotline: 028 3715 0068 (8h30-18h00) </string>
    <string name="lblTacGia"> Tác Giả</string>
    <!-- End -->
    <!-- String for information_flight_layout -->
    <string name="tv_money">$2,775,000</string>
    <string name="tv_chonchuyenkhac">Chuyến Khác</string>
    <string name="lblThongtinchuyenbay">Thông tin chuyến bay</string>
    <string name="lblChieudi">Chiều đi</string>
    <string name="lblChieuve">Chiều về</string>
    <string name="lblDate">Saturday, 24 June 2020</string>
    <string name="lblDatecv">Saturday, 25 June 2020</string>
    <string name="tv_Noichon">Hà Nội</string>
    <string name="tv_Noichon1">Buôn Ma Thuột</string>
    <string name="tv_timekh"> 12:00 </string>
    <string name="tv_timekt"> 13:00 </string>
    <string name="tv_Datekh"> 24 Jun </string>
    <string name="tv_Datekt"> 25 Jun </string>
    <string name="tv_Diemxp"> Hà Nội (HN) </string>
    <string name="tv_Diemkt"> Hồ Chí Minh (HCM) </string>
    <string name="tv_Mave"> BL-211-357 </string>
    <string name="tv_Thongtingiave"> Thông tin giá vé </string>
    <string name="tv_Giave"> Giá Vé</string>
    <string name="tv_Thue"> Thuế &#38; phí </string>
    <string name="tv_Tong"> Tổng cộng</string>
    <string name="tv_MoneyGiave">$4,185,000</string>
    <string name="tv_MoneyThue">$1,120,500</string>
    <string name="tv_MoneyTong">$5,305,500</string>
    <string name="tv_Luuy">(* Giá vé đã bao gồm thuế và phụ phí)</string>
    <!--End-->
    <string name="date">24 tháng 8 2020</string>
    <string name="nguoilon">người lớn</string>
    <string name="treem">trẻ em</string>
    <string name="hanghangkhong">Hãng hàng không</string>
    <string name="giacuocthe">Giá Cước</string>
    <string name="daugach"> - </string>
    <string name="ma"> VJ </string>
    <string name="maTpdi"> SGN </string>
    <string name="maTpDen"> HAN </string>
    <string name="ma160"> 160 </string>
    <string name="gioXuatphat"> 15:50 </string>
    <string name="gioDen">14:00</string>
    <string name="money">  299.000 đ </string>
    <string name="btnChiTiet"> Chi Tiết </string>
    <string name="tv_So1"> 1</string>
    <string name="tv_So0"> 0</string>
    <string name="tv_chondemden">Chọn điểm đến</string>

    <string name="lblQuestion">MỌI THẮC MẮC ĐÓNG GÓP LIÊN QUAN ĐẾN ỨNG DỤNG BẠN CÓ THỂ LIÊN HỆ QUA</string>
    <string name="btnTieptuc">Tiếp tục </string>
    <!-- Dialog -->
    <string name="chon">CHỌN</string>
    <string name="huy">HỦY</string>
    <string name="result_findplanes">Kết quả tìm kiếm</string>
    <!--   infor_person_layout -->
    <string name="tv_HangMayBay">Viet Jet</string>
    <string name="tv_tong">Tổng: 730.000 đ </string>
    <string name="tv_sotien"> 730.000 đ </string>
    <string name="tv_SG"> SGN </string>
    <string name="tv_HAN"> HAN </string>
    <string name="tv_timeXP"> 6:20 </string>
    <string name="tv_timeKT"> 8:30 </string>
    <string name="tv_maMaybay"> VN6002 </string>
    <string name="tv_thongtinlienhe"> Thông Tin Liên Hệ </string>
    <string name="tv_thongtinkhachhang"> Thông Tin Khách Hàng </string>
    <string name="lblthongtindonhang">Thông tin đơn hàng</string>
    <string name="btn_nguoi"> Người lớn 1 </string>
    <string-array name="danhxung">
    <item> Ông </item>
    <item> Bà </item></string-array>

    <!--    End-->
    <!-- Dialog_infor_contact_layout   -->

    <!--   End -->
<!--    Fragment pay layout-->
    <string name="lblPhuongthuc">Phương thức thanh toán</string>
    <string name="tv_madonhang">Mã đơn hàng: 2919</string>
    <string name="tv_tonggia">Tổng giá: 730.000 đ</string>
    <string name="tv_thanhtoandaily">Thanh toán tại đại ly</string>
    <string name="tv_chuyenkhoandaily">Chuyển khoản qua tại ngân hàng</string>
    <string name="tv_hoantat">Hoàn tất</string>
    <string name="tv_lienhe">Quý khách vui lòng liên hệ văn phòng của <b> Mua vé rẻ (Lưu ý: Sau 18h thì liên hệ sdt 028 3715 0068) tai: </b> </string>
    <string name="lbl_DiaChi">Tòa nhà SBI, CVPM Quang Trung, P. Tân Chánh Hiệp, Quận 12, Tp.HCM, Việt Nam.</string>
</resources>