<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_findplane"
            android:icon="@drawable/ic_baseline_find_in_page_24"
            android:title="@string/lblFind" />
        <item
            android:id="@+id/nav_findreservationcode"
            android:icon="@drawable/ic_baseline_find_in_page_24"
            android:title="@string/lblfindcode" />
        <item
            android:id="@+id/nav_infor"
            android:icon="@drawable/ic_baseline_info"
            android:title="@string/lblThongTin" />
    </group>
</menu>