<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quanlyvemaybay2.ui.findplane.FindPlaneFragment"
        android:label="@string/lblFind"
        tools:layout="@layout/fragment_find_plane_layout" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.quanlyvemaybay2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.quanlyvemaybay2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_findplane"
        android:name="com.example.quanlyvemaybay2.ui.findplane.FindPlaneFragment"
        android:label="@string/lblFind"
        tools:layout="@layout/fragment_find_plane_layout" />

    <fragment
        android:id="@+id/nav_findreservationcode"
        android:name="com.example.quanlyvemaybay2.ui.findreservationcode.ReservationCodeFragment"
        android:label="@string/lblfindcode"
        tools:layout="@layout/fragment_reservation_code_layout">
    </fragment>
    <fragment
        android:id="@+id/nav_infor"
        android:name="com.example.quanlyvemaybay2.ui.information.Infor"
        android:label="@string/lblThongTin"
        tools:layout="@layout/fragment_information_layout">
    </fragment>
</navigation>