<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_maDi"
            android:textColor="@color/colorOrange"
            android:gravity="center"

            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDiemDi" />
        <ImageView
            android:id="@+id/imgvDiemDi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:contentDescription="@string/lblDiemDi"
            app:srcCompat="@drawable/ic_baseline_flight_takeoff_24" />
        <TextView
            android:id="@+id/tv_maDen"
            android:textColor="@color/colorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            android:text="@string/lblDiemDen"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:gravity="right"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:background="@drawable/ic_baseline_date_range_24"
                    android:layout_height="wrap_content"></ImageView>
                <TextView
                    android:id="@+id/tv_Date"
                    android:layout_width="match_parent"
                    android:text="@string/date"
                    android:gravity="center"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:background="@drawable/ic_baseline_directions_run_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_AgeNguoiLon"
                    android:layout_width="wrap_content"
                    android:text="@string/tv_So1"
                    android:textStyle="italic"
                    android:layout_margin="@dimen/margin"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/nguoilon"
                    android:textStyle="italic"
                    android:layout_margin="@dimen/margin"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/lblNguoilon"
                    android:layout_width="wrap_content"
                    android:text="@string/daugach"
                    android:textStyle="italic"
                    android:layout_margin="@dimen/margin"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_AgeTreem"
                    android:layout_width="wrap_content"
                    android:text="@string/tv_So0"
                    android:textStyle="italic"
                    android:layout_margin="@dimen/margin"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/lblTreEm"
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:text="@string/treem"
                    android:layout_margin="@dimen/margin"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBlack"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnHangHK"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorBlack"
                android:drawableLeft="@drawable/ic_baseline_flight_24"
                android:text="@string/hanghangkhong"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnGiaCuoc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorBlack"
                android:drawableLeft="@drawable/ic_baseline_attach_money_24"
                android:text="@string/giacuocthe"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemFind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>