<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueMo"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_masodatcho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblMadatcho"
                android:layout_marginBottom="5sp"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:id="@+id/edt_maosodatcho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:layout_marginBottom="5sp"
                android:textSize="30sp"
               ></EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblSurname"
                android:layout_marginBottom="5sp"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:layout_marginBottom="5sp"
                android:textSize="30sp"></EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblLastName"
                android:layout_marginBottom="5sp"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_marginBottom="5sp"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="30sp"></EditText>
          <Button
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/lblTracuu"
              android:background="@drawable/mybutton"></Button>
        </LinearLayout>

</LinearLayout>